auto-test/tests/chapter_18/invalid_types/tag_resolution/mismatched_return_type.c
struct s {
  int a;
  int b;
};

struct s return_struct(void) {
  
  struct s {
    int a;
    int b;
  };
  struct s result = {1, 2};
  
  
  return result;
}
